# diesel_default

./: .gitignore  Cargo.toml  README.md
diesel_default_derive/: Cargo.toml
diesel_default_derive/src/: lib.rs
diesel_mate_derive/: Cargo.toml  README.md
diesel_mate_derive/src/: lib.rs
encrypted_id/: Cargo.toml  README.md
encrypted_id/src/: decrypt.rs  encrypt.rs  prelude.rs  test.rs
examples/: Cargo.toml
examples/src/: db_test.rs  endec.rs  lib.rs
