[package]
name = "diesel_default_derive"
version = "0.1.0"
authors = ["AbrarNitk <abrar.nitk@gmail.com>"]
edition = "2018"
description = "Diesel defaults attributes macros"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]
readme = "README.md"
keywords = ["defaults", "save", "insert", "delete"]
repository = "https://github.com/AbrarNitk/diesel_default"

[lib]
proc-macro = true

[dependencies]
quote = "0.6"
proc-macro2 = "0.4"
darling = "0.9.0"

[dependencies.syn]
version = "0.15.42"
features = ["full"]