[package]
name = "diesel_mate_derive"
version = "0.1.0"
authors = ["AbrarNitk <abrar.nitk@gmail.com>"]
edition = "2018"
description = "Diesel mate proc macros"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]
readme = "README.md"
keywords = ["defaults", "save", "delete", "filter_id", "find_one"]
repository = "https://github.com/AbrarNitk/diesel_mate"

[lib]
proc-macro = true

[dependencies]
quote = "0.6"
proc-macro2 = "0.4"
darling = "0.9.0"

[dependencies.syn]
version = "0.15.42"
features = ["full"]