[package]
name = "examples"
version = "0.1.0"
authors = ["AbrarNitk <abrar.nitk@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
postgres = "~0.15.2"
chrono-tz = "~0.4"
failure = "~0.1.1"
bigdecimal = "0.1.0"
diesel_mate_derive = { path = "./../diesel_mate_derive" }

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.diesel]
version = "= 1.3.3"
features = [
    "postgres",
    "64-column-tables",
    "serde_json",
    "network-address",
    "chrono",
    "bigdecimal",
    "num-bigint",
    "num-integer",
    "num-traits",
]